# nextjs-fastapi-postgres-starter

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  socket.py
backend/app/api/routes/: chat.py  user.py
backend/app/db/: session.py
backend/app/models/: chat.py  user.py
backend/app/seed/: seed.py
backend/app/services/: chat_service.py  user_service.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/app/hooks/: useChat.ts
frontend/app/utils/: api.ts
