[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marlon Monroy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2-binary = "*"
uvicorn = "*"
python-socketio = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
